add Free Learning v5.5.00

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Feed"]
 	path = Feed
 	url = https://github.com/GibbonEdu/module-feed.git
+[submodule "Free Learning"]
+	path = Free Learning
+	url = https://github.com/GibbonEdu/module-freeLearning.git
