--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Help Desk"]
 	path = Help Desk
 	url = https://github.com/raynichc/helpdesk.git
+[submodule "Higher Education"]
+	path = Higher Education
+	url = https://github.com/GibbonEdu/module-higherEducation.git
