--- a/.gitmodules
+++ b/.gitmodules
@@ -42,7 +42,7 @@
 	url = https://github.com/GibbonEdu/module-queryBuilder.git
 [submodule "Reporting"]
 	path = Reporting
-	url = https://github.com:yookoala/GibbonEduReporting.git
+	url = https://github.com/yookoala/GibbonEduReporting.git
 [submodule "ATL"]
 	path = ATL
 	url = https://github.com/GibbonEdu/module-ATL.git
